---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.08.XX
  Features:
    - Compressed fluids with temperatures
  Changes:
    - Better visibly for decompression icons
    - Fluid compression/decompression recipes are unlocked by default
  Bugfixes:
    - Fix crash with massive entity HP
    - Fix crash with unspecified subgroups
---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.08.14
  Features:
    - Compatibility for bob's nuclear power when using "compress only highest tier"
  Changes:
    - Increase stack sizes for compressed belts and variants of
  Bugfixes:
    - Fix failure to load on latest experimental caused by massive tech costs
    - Fix crash when compressing entities that don't specify max_health
    - Fix compressed recipes with random results sometimes having the incorrect result amount
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.07.26
  Changes:
    - Burner assemblers have less of a speed penalty compared to their electric brethren
      (they are still less efficient in ore/watt, and cannot take modules)
    - Add an entry to game log when not compressing items due to massive stack sizes
  Bugfixes:
    - Fix some buildings losing their crafting categories when compressed
    - Fix handling outputs > 65535
---------------------------------------------------------------------------------------------------
Version: 4.1.7
Date: 2021.06.02
  Bugfixes:
    - Fixed that certain entities were not compressed with angels component mode turned on
---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 2021.03.28
  Changes:
    - You can now compress buildings in compressed assemblers
    - Allow compressor & co in SE space
  Bugfixes: