@@ -6,6 +6,7 @@ Date: 2021.08.XX
   Changes:
     - Better visibly for decompression icons
     - Fluid compression/decompression recipes are unlocked by default
+    - Small buff to make compressed power poles & inserters scale slightly based on compression multiplier
   Bugfixes:
     - Fix crash with massive entity HP
     - Fix crash with unspecified subgroups
